--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://meirbr.github.io/landing-page",
+  "homepage": "http://meirbr.github.io/tzanhanim-lp",
   "name": "landing-page",
   "version": "0.1.0",
   "private": true,
